<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:padding="6dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="64dp"
            android:layout_height="84dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/bookCover"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewTitle"
                android:textColor="#000000"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewDescription"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>